crates/infinity-agent-cli/tests/snapshots/tui_snapshots__spinner_loading_context_t300ms.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> hi                                                                            │
│                                                                                │
│▆▆▆▆▆▆▆▆▆▆                                                                      │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
