crates/infinity-agent-cli/tests/snapshots/tui_snapshots__tool_call_and_result_same_batch.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> read the config file                                                          │
│◆ read_file(config.toml)                                                        │
│✓ [workspace]                                                                   │
│  members = ["a", "b"]                                                          │
│                                                                                │
│                                                                                │
│██████████                                                                      │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
